fix missing parens bugs

--- a/Views/contacts.cshtml
+++ b/Views/contacts.cshtml
@@ -7,7 +7,7 @@
     <ul>
       <p>Address:</p>
       <li>@contact.GetStreetAddress()</li>
-      <li>@contact.GetCity, @contact.GetState @contact.GetZipCode</li>
+      <li>@contact.GetCity(), @contact.GetState() @contact.GetZipCode()</li>
     </ul>
   }
 </ul>
